update app-config to validate build

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -61,7 +61,7 @@ auth:
 scaffolder:
   defaultAuthor:
     name: ":robot: [backstage-bot]"
-    email: paulofponciano@gmail.com
+    email: gportela@valcann.com.br
 
 catalog:
   import:
