--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -2,7 +2,7 @@ name: Dev Build
 
 on:
   push:
-    branches: [v1.30.4]
+    branches: main
     paths-ignore:
       - 'k8s/**'
       - 'catalog-entities/**'
