--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Dev Build
 
 on:
   push:
-    branches: main
+    branches: [main]
     paths-ignore:
       - 'k8s/**'
       - 'catalog-entities/**'
