--- a/catalog-entities/api/hello-world.yaml
+++ b/catalog-entities/api/hello-world.yaml
@@ -9,7 +9,7 @@ metadata:
     - rest
 spec:
   type: openapi
-  system: versionup
+  system: E-commerce Platform
   lifecycle: experimental
   owner: sre
   definition:
