--- a/catalog-entities/system/e-commerce.yaml
+++ b/catalog-entities/system/e-commerce.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: System
 metadata:
-  name: e-commerce-platform
-  title: E-commerce Platform
+  name: e-commerce
+  title: E-commerce
 spec:
   owner: web-sales
