--- a/catalog-entities/templates/app-go.yaml
+++ b/catalog-entities/templates/app-go.yaml
@@ -30,7 +30,7 @@ spec:
         description:
           title: Description
           type: string
-          description: Help others understand what this website is for.
+          description: Help others understand what this component is for.
         system:
           title: System
           type: string
