--- a/app-config.yaml
+++ b/app-config.yaml
@@ -72,6 +72,8 @@ catalog:
   locations:
     - type: url
       target: https://github.com/pegasus-idp/backstage-app/blob/main/catalog-entities/locations.yaml
+    - type: url
+      target: https://github.com/pegasus-idp/backstage-app/blob/main/catalog-entities/user/users.yaml
 
 kubernetes:
   serviceLocatorMethod:
