--- a/catalog-entities/skeleton/kubernetes/apps/kustomize/${{values.component_id}}/base/${{values.component_id}}-dns-record.yaml
+++ b/catalog-entities/skeleton/kubernetes/apps/kustomize/${{values.component_id}}/base/${{values.component_id}}-dns-record.yaml
@@ -14,4 +14,4 @@ spec:
   resourceConfig:
     providerConfigName: aws
     record: ${{values.component_id}}
-    region: us-east-2
+    region: us-west-2
