--- a/catalog-entities/skeleton/kubernetes/apps/kustomize/${{values.component_id}}/base/${{values.component_id}}-vs.yaml
+++ b/catalog-entities/skeleton/kubernetes/apps/kustomize/${{values.component_id}}/base/${{values.component_id}}-vs.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: ${{values.component_id}}
 spec:
   selector:
-    istio: ingressgateway
+    istio: gateway
   servers:
     - hosts:
         - ${{values.component_id}}.sevira.cloud
