--- a/k8s/backstage_istio_ingress.yaml
+++ b/k8s/backstage_istio_ingress.yaml
@@ -8,7 +8,7 @@ spec:
     istio: gateway
   servers:
     - hosts:
-        - backstage.sevira.cloud
+        - backstage.gabportela.pro
       port:
         name: http
         number: 80
