--- a/catalog-entities/skeleton/kubernetes/apps/kustomize/${{values.component_id}}/base/${{values.component_id}}-vs.yaml
+++ b/catalog-entities/skeleton/kubernetes/apps/kustomize/${{values.component_id}}/base/${{values.component_id}}-vs.yaml
@@ -8,7 +8,7 @@ spec:
     istio: gateway
   servers:
     - hosts:
-        - ${{values.component_id}}.sevira.cloud
+        - ${{values.component_id}}.gabportela.pro
       port:
         name: http
         number: 80
@@ -16,7 +16,7 @@ spec:
       tls:
         httpsRedirect: true
     - hosts:
-        - ${{values.component_id}}.sevira.cloud
+        - ${{values.component_id}}.gabportela.pro
       port:
         name: https-workloads
         number: 443
@@ -37,7 +37,7 @@ spec:
   gateways:
   - ${{values.component_id}}-gw
   hosts:
-  - ${{values.component_id}}.sevira.cloud
+  - ${{values.component_id}}.gabportela.pro
   http:
   - name: primary
     route:
